[package]
name = "neoiot_emqx_hook"
version = "0.1.0"
authors = ["Tian Pengfei <itsneo1990@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.1"
tonic-health = "0.5.0"
prost = "0.9.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

config = "0.11"
anyhow = "1.0"
bcrypt = "0.10.1"
base64 = "0.13.0"
lru_time_cache = "0.11.10"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pulsar = { version = "4.1.1"}
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.6"
