[package]
name = "neoiot_emqx_hook"
version = "0.1.0"
authors = ["Tian Pengfei <itsneo1990@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.2"
tonic-health = "0.5.0"
prost = "0.9.0"
tokio = { version = "1.17.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }

config = "0.12.0"
anyhow = "1.0.55"
bcrypt = "0.10.1"
base64 = "0.13.0"
lru_time_cache = "0.11.11"
sqlx = { version = "0.5.11", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.6.2"
